--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,12 @@
   </head>
 
   <body>
-    <h1>Time to start prototyping!</h1>
+
+  <header>
+  <nav id="test">something here</nav> 
+    <span id="titlescreen"><img src="images/roussetos-ca.png"></span>
+  </header>
+
 
     <!-- build:js scripts/main.js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
