--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,17 @@
   <body>
 
   <header>
-  <nav id="test">something here</nav> 
+  <nav id='navbar'><span></span>
+    <a id="nav-toggle" href="#"><span></span></a>
+        <ul>
+          <li><a href="#" title="Lorem">Lorem</a></li>
+          <li><a href="#" title="Lorem">Lorem</a></li>
+          <li><a href="#" title="Lorem">Lorem</a></li>
+          <li><a href="#" title="Lorem">Lorem</a></li>
+          <li><a href="#" title="Lorem">Lorem</a></li>
+        </ul>
+  </nav> 
+
     <span id="titlescreen"><img src="images/roussetos-ca.png"></span>
   </header>
 
