--- a/app/index.html
+++ b/app/index.html
@@ -24,49 +24,107 @@
   <nav id="navbar"><span></span>
     <a id="nav-toggle" href="#"><span></span></a>
         <ul>
-          <li><a href="#" title="Lorem">Lorem</a></li>
-          <li><a href="#" title="Lorem">Lorem</a></li>
-          <li><a href="#" title="Lorem">Lorem</a></li>
-          <li><a href="#" title="Lorem">Lorem</a></li>
-          <li><a href="#" title="Lorem">Lorem</a></li>
+          <li><a href="#" title="Lorem">9-5</a></li>
+          <li><a href="#" title="Lorem">Postcards</a></li>
+          <li><a href="#" title="Lorem">Curiosities</a></li>
+          <li><a href="#" title="Lorem">Follow Me</a></li>
+          <li><a href="#" title="Lorem">Contact Me</a></li>
         </ul>
   </nav>
 
     <h1>
-    <span id="titlescreen"><a href="#test"><img src="images/roussetos-ca.png"></a></span>
+    <span id="titlescreen"><img src="images/roussetos-ca.png"></span>
     </h1>
+
+<ul>
+  <li><a href="#test" id="skip">&diams;</a></li>
+</ul>
+
 
   </header>
 
 <main id="content">
 <a id="test"></a>
-  <section>
-    <h2>Introduction</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  <section class="video">
+    <h2>Video</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+
+    <a href="http://placehold.it/2000x2000" class="fluidbox">
+    <img src="http://placehold.it/200x200" alt="test" class="fluidbox" />
+    </a>
+
   </section>
 
-  <section>
-    <h2>Introduction</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </section>
+
+
+<section>
+    <h2>9-5 Work</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+
+<div class="work">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+</div>
+
+
+<section>
+    <h2>Postcards</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+
+<div class="work">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+</div>
+
+<section>
+    <h2>Curiosities</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+
+<div class="work">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+    <img src="http://placehold.it/200x200">
+</div>
+
+</section>
 
     <section>
     <h2>Introduction</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </section>
 
-    <section>
-    <h2>Introduction</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </section>
+
+<footer>
+
+  <ul><li>One</li></ul>
+  <ul><li>Two</li></ul>
+  <ul><li>Three</li></ul>
+  <ul><li>Four</li></ul>
+
+</footer>
 
   </main>
+
+
 
 
     <!-- build:js scripts/main.js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="scripts/animate.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/fluidbox.js"></script>
     <!-- endbuild -->
   </body>
 </html>
