--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,22 @@
     <script src="../bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
 
+    <!-- This script below is for instagram -->
+
+    <script type="text/javascript">
+    var userFeed = new Instafeed({
+        get: 'user',
+        limit: "1",
+        resolution: "low_resolution",
+        userId: 30743102,
+        accessToken: '30743102.467ede5.5fa50258399f40d19b1f1933ceaf2d6e'
+    });
+    userFeed.run();
+
+    </script>
+
+    <!-- This script above is for instagram -->
+
   </head>
 
   <body>
@@ -24,10 +40,11 @@
   <nav id="navbar"><span></span>
     <a id="nav-toggle" href="#"><span></span></a>
         <ul>
-          <li><a href="#" title="Lorem">9-5</a></li>
-          <li><a href="#" title="Lorem">Postcards</a></li>
-          <li><a href="#" title="Lorem">Curiosities</a></li>
-          <li><a href="#" title="Lorem">Follow Me</a></li>
+          <li><a href="#video" title="Video">Video</a></li>
+          <li><a href="#editorial" title="Editorial Work">Editorial Design</a></li>
+          <li><a href="#postcards" title="Postcards">Postcards</a></li>
+          <li><a href="#curiosities" title="Curiosities">Curiosities</a></li>
+          <li><a href="#instagram" title="Social-Media">Instagram</a></li>
           <li><a href="#" title="Lorem">Contact Me</a></li>
         </ul>
   </nav>
@@ -45,14 +62,17 @@
 
 <main id="content">
 <a id="test"></a>
+<a id="video"></a>
 
   <section class="video">
     <h2>Video</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
-<a href="http://placehold.it/800x800">
-    <img src="http://placehold.it/250x250" alt="" />
-</a>
+
+<div class="movie" id="homepage">
+
+<iframe src="//player.vimeo.com/video/91223826?title=0&amp;byline=0&amp;portrait=0" title="Daily Work" alt="dailywork" width="820px" height="461px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
 
  </section>
 
@@ -60,59 +80,230 @@
 
 
 <section>
-    <h2>9-5 Work</h2>
+<a id="editorial"></a>
+    <h2>Editorial Design</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
 <div class="work">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
+
+    <a href="images/acura_slide4.jpg">
+    <img src="images/acura_slide4.jpg" alt="" />
+    </a>
+
 </div>
 
-
-<section>
-    <h2>Postcards</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-
 <div class="work">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
-</div>
 
-<section>
-    <h2>Curiosities</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+<a href="images/geico_slide2.jpg">
+<img src="images/geico_slide2.jpg" alt="" />
+</a>
 
-<div class="work">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
-    <img src="http://placehold.it/200x200">
+<a href="images/lgfb_slide14.jpg">
+<img src="images/lgfb_slide14.jpg" alt="" />
+</a>
+
+<a href="images/rouge_slide1.jpg">
+<img src="images/rouge_slide1.jpg" alt="" />
+</a>
+
+<a href="images/belle_slide1.jpg">
+<img src="images/belle_slide1.jpg" alt="" />
+</a>
+
+<a href="images/canadian_slide1.jpg">
+<img src="images/canadian_slide1.jpg" alt="">
+</a>
+
 </div>
 
 </section>
 
-    <section>
-    <h2>Introduction</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </section>
+<section>
+<a id="postcards"></a>
+    <h2>Postcards</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+
+<div class="work">
+
+  <a href="images/postcard-dropcap.jpg">
+  <img src="images/postcard-dropcap.jpg" alt="" />
+  </a>
+
+  <a href="images/postcard-lineart.png">
+  <img src="images/postcard-lineart.png" alt="" />
+  </a>
+
+  <a href="images/postcard-slide1.jpg">
+  <img src="images/postcard-slide1.jpg" alt="" />
+  </a>
+
+  <a href="images/postcard-slide3.jpg">
+  <img src="images/postcard-slide3.jpg" alt="" />
+  </a>
+
+</div>
+
+<div class="work">
+
+  <a href="images/postcard-slide4.jpg">
+  <img src="images/postcard-slide4.jpg" alt="" />
+  </a>
+
+  <a href="images/postcard-slide5.jpg">
+  <img src="images/postcard-slide5.jpg" alt="" />
+  </a>
+
+  <a href="images/postcard-slide6.jpg">
+  <img src="images/postcard-slide6.jpg" alt="" />
+  </a>
+
+  <a href="images/postcard-slide7.jpg">
+  <img src="images/postcard-slide7.jpg" alt="" />
+  </a>
+
+  <a href="images/postcard-slide8.jpg">
+  <img src="images/postcard-slide8.jpg" alt="" />
+  </a>
+
+</div>
+
+</section>
+
+<section>
+<a id="curiosities"></a>
+    <h2>Curiosities</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+
+<div class="work">
+  <a href="images/curiosity-slide1.jpg">
+  <img src="images/curiosity-slide1.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide2.jpg">
+  <img src="images/curiosity-slide2.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide3.jpg">
+  <img src="images/curiosity-slide3.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide4.jpg">
+  <img src="images/curiosity-slide4.jpg" alt="" />
+  </a>
+
+</div>
+
+<div class="work">
+
+  <a href="images/curiosity-slide5.jpg">
+  <img src="images/curiosity-slide5.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide6.jpg">
+  <img src="images/curiosity-slide6.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide7.jpg">
+  <img src="images/curiosity-slide7.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide8.jpg">
+  <img src="images/curiosity-slide8.jpg" alt="" />
+  </a>
+
+</div>
+
+<div class="work">
+
+  <a href="images/curiosity-slide8a.jpg">
+  <img src="images/curiosity-slide8a.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide9.jpg">
+  <img src="images/curiosity-slide9.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide10.jpg">
+  <img src="images/curiosity-slide10.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide12.jpg">
+  <img src="images/curiosity-slide12.jpg" alt="" />
+  </a>
+
+</div>
+
+<div class="work">
+
+  <a href="images/curiosity-slide13.jpg">
+  <img src="images/curiosity-slide13.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide14.jpg">
+  <img src="images/curiosity-slide14.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide15.jpg">
+  <img src="images/curiosity-slide15.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide16.jpg">
+  <img src="images/curiosity-slide16.jpg" alt="" />
+  </a>
+
+</div>
+
+<div class="work">
+
+  <a href="images/curiosity-slide17.jpg">
+  <img src="images/curiosity-slide17.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide18.jpg">
+  <img src="images/curiosity-slide18.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide19.jpg">
+  <img src="images/curiosity-slide19.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide20.jpg">
+  <img src="images/curiosity-slide20.jpg" alt="" />
+  </a>
+
+</div>
+
+<div class="work">
+
+  <a href="images/curiosity-slide21.jpg">
+  <img src="images/curiosity-slide21.jpg" alt="" />
+  </a>
+
+  <a href="images/curiosity-slide22.jpg">
+  <img src="images/curiosity-slide22.jpg" alt="" />
+  </a>
+
+</div>
+
+</section>
+
+<section>
+<a id="instagram"></a>
+
+<h2>Instagram</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+<div>
+<a href="http://www.google.com"><div id="instafeed"></div></a>
+<img src="http://placehold.it/640x640">
+</div>
+
+</section>
 
 
 <footer>
 
-  <ul><li>One</li></ul>
-  <ul><li>Two</li></ul>
-  <ul><li>Three</li></ul>
-  <ul><li>Four</li></ul>
+  <ul><li>Made by <a href="mailto:mihalirou@gmail.com">Michael Roussetos</a> 2014</li></ul>
 
 </footer>
 
@@ -127,6 +318,7 @@
     <script src="scripts/main.js"></script>
     <script src="scripts/jquery.fluidbox.min.js"></script>
     <script src="scripts/fluidbox.js"></script>
+    <script src="scripts/instafeed.min.js"></script>
     <!-- endbuild -->
   </body>
 </html>
