--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <!-- endbuild -->
 
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/animate.css">
 
 
     <!-- build:js scripts/vendor/modernizr.js -->
@@ -40,12 +41,12 @@
   <nav id="navbar"><span></span>
     <a id="nav-toggle" href="#"><span></span></a>
         <ul>
-          <li><a href="#video" title="Video">Video</a></li>
+          <li><a href="#video" title="Video">Video Production</a></li>
           <li><a href="#editorial" title="Editorial Work">Editorial Design</a></li>
           <li><a href="#postcards" title="Postcards">Postcards</a></li>
           <li><a href="#curiosities" title="Curiosities">Curiosities</a></li>
           <li><a href="#instagram" title="Social-Media">Instagram</a></li>
-          <li><a href="#" title="Lorem">Contact Me</a></li>
+          <li><a href="#contactme" title="Lorem">Contact Me</a></li>
         </ul>
   </nav>
 
@@ -54,7 +55,7 @@
     </h1>
 
 <ul>
-  <li><a href="#test" id="skip">&diams;</a></li>
+  <li><a href="#test" id="skip"><img src="images/arrow.png"></a></li>
 </ul>
 
 
@@ -65,7 +66,7 @@
 <a id="video"></a>
 
   <section class="video">
-    <h2>Video</h2>
+    <h2>Video Production</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
 
@@ -78,48 +79,326 @@
 
 
 
-
-<section>
 <a id="editorial"></a>
+<section>
+
     <h2>Editorial Design</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
+<div class="work1">
+
+
+</div>
+
+<ul class="add"><li>
+  <div class="work">
+
+  <a href="images/geico_slide2.jpg">
+  <img src="images/geico_slide2.jpg" alt="" />
+  </a>
+
+  <a href="images/geico_slide2a.jpg">
+  <img src="images/geico_slide2a.jpg" alt="" />
+  </a>
+</div>
+</li></ul>
+
+<ul class="add"><li>
 <div class="work">
 
-    <a href="images/acura_slide4.jpg">
-    <img src="images/acura_slide4.jpg" alt="" />
-    </a>
+  <a href="images/geico_slide3.jpg">
+  <img src="images/geico_slide3.jpg" alt="" />
+  </a>
+
+  <a href="images/geico_slide4.jpg">
+  <img src="images/geico_slide4.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/geico_slide5.jpg">
+  <img src="images/geico_slide5.jpg" alt="" />
+  </a>
+
+  <a href="images/geico_slide6.jpg">
+  <img src="images/geico_slide6.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/geico_slide2b.jpg">
+  <img src="images/geico_slide2b.jpg" alt="" />
+  </a>
+
+  <a href="images/geico_slide11.jpg">
+  <img src="images/geico_slide11.jpg" alt="" />
+  </a>
+
+  <a href="images/geico_slide1.jpg">
+  <img src="images/geico_slide1.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/acura_slide1.jpg">
+  <img src="images/acura_slide1.jpg" alt="" />
+  </a>
+
+  <a href="images/acura_slide2.jpg">
+  <img src="images/acura_slide2.jpg" alt="" />
+  </a>
+
+  <a href="images/acura_slide3.jpg">
+  <img src="images/acura_slide3.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/acura_slide11.jpg">
+  <img src="images/acura_slide11.jpg" alt="" />
+  </a>
+
+  <a href="images/acura_slide12.jpg">
+  <img src="images/acura_slide12.jpg" alt="" />
+  </a>
+
+  <a href="images/acura_slide13.jpg">
+  <img src="images/acura_slide13.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/acura_slide4.jpg">
+  <img src="images/acura_slide4.jpg" alt="" />
+  </a>
+
+  <a href="images/acura_slide5.jpg">
+  <img src="images/acura_slide5.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/acura_slide6.jpg">
+  <img src="images/acura_slide6.jpg" alt="" />
+  </a>
+
+  <a href="images/acura_slide7.jpg">
+  <img src="images/acura_slide7.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/acura_slide8.jpg">
+  <img src="images/acura_slide8.jpg" alt="" />
+  </a>
+
+  <a href="images/acura_slide9.jpg">
+  <img src="images/acura_slide9.jpg" alt="" />
+  </a>
+
+  <a href="images/acura_slide10.jpg">
+  <img src="images/acura_slide10.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/lgfb_slide13.jpg">
+  <img src="images/lgfb_slide13.jpg" alt="" />
+  </a>
+
+  <a href="images/lgfb_slide14.jpg">
+  <img src="images/lgfb_slide14.jpg" alt="" />
+  </a>
+
+  <a href="images/lgfb_slide10.jpg">
+  <img src="images/lgfb_slide10.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/lgfb_slide8.jpg">
+  <img src="images/lgfb_slide8.jpg" alt="" />
+  </a>
+
+  <a href="images/lgfb_slide7.jpg">
+  <img src="images/lgfb_slide7.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/lgfb_slide11.jpg">
+  <img src="images/lgfb_slide11.jpg" alt="" />
+  </a>
+
+  <a href="images/lgfb_slide12.jpg">
+  <img src="images/lgfb_slide12.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/lgfb_slide4.jpg">
+  <img src="images/lgfb_slide4.jpg" alt="" />
+  </a>
+
+  <a href="images/lgfb_slide5.jpg">
+  <img src="images/lgfb_slide5.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/lgfb_slide1.jpg">
+  <img src="images/lgfb_slide1.jpg" alt="" />
+  </a>
+
+  <a href="images/lgfb_slide3.jpg">
+  <img src="images/lgfb_slide3.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/rouge_slide1.jpg">
+  <img src="images/rouge_slide1.jpg" alt="" />
+  </a>
+
+  <a href="images/rouge_slide7.jpg">
+  <img src="images/rouge_slide7.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/rouge_slide5.jpg">
+  <img src="images/rouge_slide5.jpg" alt="" />
+  </a>
+
+  <a href="images/rouge_slide6.jpg">
+  <img src="images/rouge_slide6.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/rouge_slide2.jpg">
+  <img src="images/rouge_slide2.jpg" alt="" />
+  </a>
+
+  <a href="images/rouge_slide3.jpg">
+  <img src="images/rouge_slide3.jpg" alt="" />
+  </a>
+
+  <a href="images/rouge_slide4.jpg">
+  <img src="images/rouge_slide4.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/belle_slide1.jpg">
+  <img src="images/belle_slide1.jpg" alt="" />
+  </a>
+
+  <a href="images/belle_slide2.jpg">
+  <img src="images/belle_slide2.jpg" alt="" />
+  </a>
+
+  <a href="images/belle_slide3.jpg">
+  <img src="images/belle_slide3.jpg" alt="" />
+  </a>
+
+  <a href="images/belle_slide4.jpg">
+  <img src="images/belle_slide4.jpg" alt="" />
+  </a>
+
+</div>
+</li></ul>
+
+<ul class="add"><li>
+<div class="work">
+
+  <a href="images/citybites_slide1.jpg">
+  <img src="images/citybites_slide1.jpg" alt="" />
+  </a>
 
 </div>
 
 <div class="work">
 
-<a href="images/geico_slide2.jpg">
-<img src="images/geico_slide2.jpg" alt="" />
-</a>
-
-<a href="images/lgfb_slide14.jpg">
-<img src="images/lgfb_slide14.jpg" alt="" />
-</a>
-
-<a href="images/rouge_slide1.jpg">
-<img src="images/rouge_slide1.jpg" alt="" />
-</a>
-
-<a href="images/belle_slide1.jpg">
-<img src="images/belle_slide1.jpg" alt="" />
-</a>
-
-<a href="images/canadian_slide1.jpg">
-<img src="images/canadian_slide1.jpg" alt="">
-</a>
+  <a href="images/glidden_slide1.jpg">
+  <img src="images/glidden_slide1.jpg" alt="" />
+  </a>
 
 </div>
+</li></ul>
 
 </section>
 
-<section>
+<button id="add_li">Add List</button>
+<button id="remove_li">Remove List</button>
+
 <a id="postcards"></a>
+<section>
+
     <h2>Postcards</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
@@ -169,8 +448,9 @@
 
 </section>
 
-<section>
 <a id="curiosities"></a>
+<section>
+
     <h2>Curiosities</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
@@ -287,8 +567,9 @@
 
 </section>
 
-<section>
 <a id="instagram"></a>
+<section>
+
 
 <h2>Instagram</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -300,8 +581,9 @@
 
 </section>
 
-
+<a id="contactme"></a>
 <footer>
+
 
   <ul><li>Made by <a href="mailto:mihalirou@gmail.com">Michael Roussetos</a> 2014</li></ul>
 
@@ -319,6 +601,7 @@
     <script src="scripts/jquery.fluidbox.min.js"></script>
     <script src="scripts/fluidbox.js"></script>
     <script src="scripts/instafeed.min.js"></script>
+    <script src="scripts/function.js"></script>
     <!-- endbuild -->
   </body>
 </html>
